# src/controllers/measures/measuresRouter.js
@@ -17,8 +17,12 @@ const controller = new MeasuresController({
 router.route('/last-year')
   .get((req, res, next) => controller.getLastYear(req, res, next));
 
-router.route('/urad')
-  .get((req, res, next) => controller.getUrad(req, res, next));
+router.route('/last-year-urad')
+  .get((req, res, next) => controller.getLastYearUrad(req, res, next));
+
+
+router.route('/fetch-urad/:month')
+  .get((req, res, next) => controller.fetchUrad(req, res, next))
 
 router.route('/process-urad')
   .get((req, res, next) => controller.processUrad(req, res, next));
