# swagger.yaml
@@ -44,14 +44,45 @@ paths:
                   $ref: '#/components/schemas/Measure'
         '401':
           $ref: '#/components/responses/UnauthorizedError'
-  /measures/urad:
+  /measures/last-year-urad:
     get:
       security:
       - bearerAuth: []
       tags:
         - measure
       summary: Get all the measures
-      operationId: getUrad
+      operationId: getLastYearUrad
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/xml:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Measure'
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Measure'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+  /measures/fetch-urad/{month}:
+    get:
+      security:
+      - bearerAuth: []
+      tags:
+        - measure
+      summary: Fetch urad
+      operationId: fetchUrad
+      parameters:
+      - name: "month"
+        in: "path"
+        description: "Month"
+        required: true
+        schema:
+          type: integer
       responses:
         '200':
           description: successful operation
@@ -74,8 +105,8 @@ paths:
       - bearerAuth: []
       tags:
         - measure
-      summary: Get all the measures
-      operationId: getUrad
+      summary: Process urad
+      operationId: processUrad
       responses:
         '200':
           description: successful operation
